--- a/src/cmd/cpp/Makefile
+++ b/src/cmd/cpp/Makefile
@@ -16,7 +16,7 @@ CFLAGS          += -DGCC_COMPAT -DHAVE_CPP_VARARG_MACRO_GCC
 all:            cpp $(MAN)
 
 cpp:            $(OBJS)
-		${CC} ${LDFLAGS} -o cpp.elf $(OBJS) ${LIBS}
+		${LD} ${LDFLAGS} -o cpp.elf $(OBJS) ${LIBS}
 		${OBJDUMP} -S cpp.elf > cpp.dis
 		${SIZE} cpp.elf
 		${ELF2AOUT} cpp.elf $@ && rm cpp.elf
