--- a/src/cmd/cron/Makefile
+++ b/src/cmd/cron/Makefile
@@ -84,13 +84,13 @@ lint:
 		|grep -v "constant argument to NOT" 2>&1
 
 cron:	$(CRON_OBJ)
-		${CC} ${LDFLAGS} -o $@.elf ${CRON_OBJ} ${LIBS}
+		${LD} ${LDFLAGS} -o $@.elf ${CRON_OBJ} ${LIBS}
 		${OBJDUMP} -S $@.elf > $@.dis
 		${SIZE} $@.elf
 		${ELF2AOUT} $@.elf $@
 
 crontab:	$(CRONTAB_OBJ)
-		${CC} ${LDFLAGS} -o $@.elf ${CRONTAB_OBJ} ${LIBS}
+		${LD} ${LDFLAGS} -o $@.elf ${CRONTAB_OBJ} ${LIBS}
 		${OBJDUMP} -S $@.elf > $@.dis
 		${SIZE} $@.elf
 		${ELF2AOUT} $@.elf $@
