--- a/src/cmd/date2/Makefile
+++ b/src/cmd/date2/Makefile
@@ -13,7 +13,7 @@ OBJS            = $(BIN).o
 all:            $(BIN)
 
 $(BIN):    ${OBJS}
-		${CC} ${LDFLAGS} -o $@.elf ${OBJS} ${LIBS}
+		${LD} ${LDFLAGS} -o $@.elf ${OBJS} ${LIBS}
 		${OBJDUMP} -S $@.elf > $@.dis
 		${SIZE} $@.elf
 		${ELF2AOUT} $@.elf $@
