--- a/src/cmd/getty/Makefile
+++ b/src/cmd/getty/Makefile
@@ -13,7 +13,7 @@ OBJS		= main.o init.o subr.o gettytab.o get_date.o
 all:            getty
 
 getty:          ${OBJS}
-		${CC} ${LDFLAGS} -o getty.elf ${OBJS} ${LIBS}
+		${LD} ${LDFLAGS} -o getty.elf ${OBJS} ${LIBS}
 		${OBJDUMP} -S getty.elf > getty.dis
 		${SIZE} getty.elf
 		${ELF2AOUT} getty.elf $@ && rm getty.elf
