--- a/src/cmd/lcc/Makefile
+++ b/src/cmd/lcc/Makefile
@@ -12,19 +12,19 @@ CFLAGS		+= -Werror -Wall -Os
 all:            lcc $(MAN)
 
 lcc:            $(OBJS)
-		${CC} ${LDFLAGS} -o lcc.elf $(OBJS) ${LIBS}
+		${LD} ${LDFLAGS} -o lcc.elf $(OBJS) ${LIBS}
 		${OBJDUMP} -S lcc.elf > lcc.dis
 		${SIZE} lcc.elf
 		${ELF2AOUT} lcc.elf $@ && rm lcc.elf
 
 bprint:         bprint.o ../lccom/profio.c
-		${CC} ${LDFLAGS} -o bprint.elf bprint.o ${LIBS}
+		${LD} ${LDFLAGS} -o bprint.elf bprint.o ${LIBS}
 		${OBJDUMP} -S bprint.elf > bprint.dis
 		${SIZE} bprint.elf
 		${ELF2AOUT} bprint.elf $@ && rm bprint.elf
 
 ops:            ops.o ../lccom/c.h ../lccom/ops.h
-		${CC} ${LDFLAGS} -o ops.elf ops.o ${LIBS}
+		${LD} ${LDFLAGS} -o ops.elf ops.o ${LIBS}
 		${OBJDUMP} -S ops.elf > ops.dis
 		${SIZE} ops.elf
 		${ELF2AOUT} ops.elf $@ && rm ops.elf
