--- a/src/cmd/login/Makefile
+++ b/src/cmd/login/Makefile
@@ -26,7 +26,7 @@ OBJS		= login.o
 all:            login
 
 login:       	${OBJS}
-		${CC} ${LDFLAGS} -o login.elf ${OBJS} ${LIBS}
+		${LD} ${LDFLAGS} -o login.elf ${OBJS} ${LIBS}
 		${OBJDUMP} -S login.elf > login.dis
 		${SIZE} login.elf
 		${ELF2AOUT} login.elf $@ && rm login.elf
