--- a/src/cmd/more/Makefile
+++ b/src/cmd/more/Makefile
@@ -14,7 +14,7 @@ OBJS		= more.o
 all:            more
 
 more:        	${OBJS}
-		${CC} ${LDFLAGS} -o more.elf ${OBJS} ${LIBS}
+		${LD} ${LDFLAGS} -o more.elf ${OBJS} ${LIBS}
 		${OBJDUMP} -S more.elf > more.dis
 		${SIZE} more.elf
 		${ELF2AOUT} more.elf $@ && rm more.elf
