--- a/src/cmd/passwd/Makefile
+++ b/src/cmd/passwd/Makefile
@@ -27,7 +27,7 @@ MANSRC		= passwd.1
 all:            passwd ${MAN}
 
 passwd:     	${OBJS}
-		${CC} ${LDFLAGS} -o passwd.elf ${OBJS} ${LIBS}
+		${LD} ${LDFLAGS} -o passwd.elf ${OBJS} ${LIBS}
 		${OBJDUMP} -S passwd.elf > passwd.dis
 		${SIZE} passwd.elf
 		${ELF2AOUT} passwd.elf $@ && rm passwd.elf
