--- a/src/cmd/pdc/Makefile
+++ b/src/cmd/pdc/Makefile
@@ -14,7 +14,7 @@ LIBS            = -lreadline -lc
 all:            pdc
 
 pdc:            $(OBJS)
-		${CC} ${LDFLAGS} -o pdc.elf $(OBJS) ${LIBS}
+		${LD} ${LDFLAGS} -o pdc.elf $(OBJS) ${LIBS}
 		${OBJDUMP} -S pdc.elf > pdc.dis
 		${SIZE} pdc.elf
 		${ELF2AOUT} pdc.elf $@ && rm pdc.elf
