--- a/src/cmd/portio/Makefile
+++ b/src/cmd/portio/Makefile
@@ -9,13 +9,13 @@ OBJS		= portio.o
 all:            portio lol
 
 portio:         ${OBJS}
-		${CC} ${LDFLAGS} -o portio.elf ${OBJS} ${LIBS}
+		${LD} ${LDFLAGS} -o portio.elf ${OBJS} ${LIBS}
 		${OBJDUMP} -S portio.elf > portio.dis
 		${SIZE} portio.elf
 		${ELF2AOUT} portio.elf $@ && rm portio.elf
 
 lol:            lol.o
-		${CC} ${LDFLAGS} -o lol.elf lol.o ${LIBS}
+		${LD} ${LDFLAGS} -o lol.elf lol.o ${LIBS}
 		${OBJDUMP} -S lol.elf > lol.dis
 		${SIZE} lol.elf
 		${ELF2AOUT} lol.elf $@ && rm lol.elf
